Fix bug where header jumped upon start

--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@ h1 {
 }
 
 .start-two-player {
-  width: 500px;
-  height: 500px;
+  width: 25vw;
+  height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -141,9 +141,18 @@ h1 {
 .scoreboard-player-two {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.visibility-hidden {
+  visibility: hidden;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
 }
 
 .cell:hover {
